--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -1,10 +1,10 @@
 node('container') {
   sh 'docker rm -f e2e chrome firefox opera mediasoup || true'
-  sh 'sudo rm -rf /opt/openvidu/removable/* || true'
+  sh 'sudo rm -rf /opt/openvidu/* || true'
   parallel (
     'Download fake video': {
       sh(script: '''#!/bin/bash -xe
-        FAKE_VIDEO=/opt/openvidu/barcode.y4m
+        FAKE_VIDEO=/opt/openvidu-cache/barcode.y4m
         if [ ! -f $FAKE_VIDEO ]; then
           wget https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/barcode.y4m -O $FAKE_VIDEO
         else
@@ -14,7 +14,7 @@ node('container') {
     },
     'Download fake audio': {
       sh(script: '''#!/bin/bash -xe
-        FAKE_AUDIO=/opt/openvidu/fakeaudio.wav
+        FAKE_AUDIO=/opt/openvidu-cache/fakeaudio.wav
         if [ ! -f $FAKE_AUDIO ]; then
           wget https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/fakeaudio.wav -O $FAKE_AUDIO
         else
@@ -23,7 +23,7 @@ node('container') {
       '''.stripIndent())
     },
     'Download custom layout': {
-      sh 'wget --directory-prefix=/opt/openvidu/test-layouts/layout1 https://raw.githubusercontent.com/OpenVidu/openvidu/master/openvidu-test-e2e/docker/my-custom-layout/index.html'
+      sh 'wget --directory-prefix=/opt/openvidu-cache/test-layouts/layout1 https://raw.githubusercontent.com/OpenVidu/openvidu/master/openvidu-test-e2e/docker/my-custom-layout/index.html'
     }
   )
   parallel (
@@ -44,7 +44,7 @@ node('container') {
     }
   )
 
-  docker.image('openvidu/openvidu-test-e2e:$DISTRO').inside('--name e2e -p 4200:4200 -p 4443:4443 -p 5555:5555 -u root -e MY_UID=0 -v /var/run/docker.sock:/var/run/docker.sock:rw -v /dev/shm:/dev/shm -v /opt/openvidu/removable:/opt/openvidu -v /opt/openvidu/.m2:/root/.m2 --privileged') {
+  docker.image('openvidu/openvidu-test-e2e:$DISTRO').inside('--name e2e -p 4200:4200 -p 4443:4443 -p 5555:5555 -u root -e MY_UID=0 -v /var/run/docker.sock:/var/run/docker.sock:rw -v /dev/shm:/dev/shm -v /opt/openvidu:/opt/openvidu -v /opt/openvidu-cache/.m2:/root/.m2 --privileged') {
     stage('Preparation') {
       sh 'rm -rf ~/.m2/repository/io/openvidu || true'
       sh 'rm -rf ~/.m2/repository/org/kurento || true'
@@ -152,7 +152,7 @@ node('container') {
       }
     }
 
-    docker.image('selenium/standalone-chrome:latest').withRun('-p 6666:4444 --name chrome --shm-size=1g -v /opt/openvidu/removable:/opt/openvidu') { a ->
+    docker.image('selenium/standalone-chrome:latest').withRun('-p 6666:4444 --name chrome --shm-size=1g -v /opt/openvidu:/opt/openvidu') { a ->
       docker.image('selenium/standalone-firefox:latest').withRun('-p 6667:4444 --name firefox --shm-size=1g') { b ->
         docker.image('selenium/standalone-opera:latest').withRun('-p 6668:4444 --name opera --shm-size=1g') { c ->
           // -----
@@ -222,7 +222,7 @@ def environmentLaunch(mediaServer) {
       --env=OPENVIDU_PRO_LICENSE=$OPENVIDU_PRO_LICENSE \
       --env=OPENVIDU_PRO_LICENSE_API=$OPENVIDU_PRO_LICENSE_API \
       --env=WEBRTC_LISTENIPS_0_ANNOUNCEDIP=172.17.0.1 --env=WEBRTC_LISTENIPS_0_IP=172.17.0.1 \
-      --volume=/opt/openvidu/removable/recordings:/opt/openvidu/recordings --network=host --restart=always --detach=true \
+      --volume=/opt/openvidu/recordings:/opt/openvidu/recordings --network=host --restart=always --detach=true \
       openvidu/mediasoup-controller:$MEDIASOUP_CONTROLLER_DOCKER_VERSION
     '''.stripIndent())
   }
