--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ node('container') {
       sh(script: '''#!/bin/bash -xe
         FAKE_VIDEO=/opt/openvidu-cache/barcode.y4m
         if [ ! -f $FAKE_VIDEO ]; then
-          wget https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/barcode.y4m -O $FAKE_VIDEO
+          wget --directory-prefix=/opt/openvidu-cache https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/barcode.y4m
         else
           echo "File $FAKE_VIDEO already exists"
         fi
@@ -16,7 +16,7 @@ node('container') {
       sh(script: '''#!/bin/bash -xe
         FAKE_AUDIO=/opt/openvidu-cache/fakeaudio.wav
         if [ ! -f $FAKE_AUDIO ]; then
-          wget https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/fakeaudio.wav -O $FAKE_AUDIO
+          wget --directory-prefix=/opt/openvidu-cache https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/fakeaudio.wav
         else
           echo "File $FAKE_AUDIO already exists"
         fi
