--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -44,7 +44,15 @@ node('container') {
     }
   )
 
-  docker.image('openvidu/openvidu-test-e2e:$DISTRO').inside('--name e2e -p 4200:4200 -p 4443:4443 -p 5555:5555 -u root -e MY_UID=0 -v /var/run/docker.sock:/var/run/docker.sock:rw -v /dev/shm:/dev/shm -v /opt/openvidu:/opt/openvidu -v /opt/openvidu-cache/barcode.y4m:/opt/openvidu/barcode.y4m -v /opt/openvidu-cache/.m2:/root/.m2 --privileged') {
+  String binds = ['-v /var/run/docker.sock:/var/run/docker.sock:rw',
+                    '-v /dev/shm:/dev/shm',
+                    '-v /opt/openvidu:/opt/openvidu',
+                    '-v /opt/openvidu-cache/barcode.y4m:/opt/openvidu/barcode.y4m',
+                    '-v /opt/openvidu-cache/fakeaudio.wav:/opt/openvidu/fakeaudio.wav',
+                    '-v /opt/openvidu-cache/test-layouts:/opt/openvidu/test-layouts',
+                    '-v /opt/openvidu-cache/.m2:/root/.m2'].join(' ')
+
+  docker.image('openvidu/openvidu-test-e2e:$DISTRO').inside('--name e2e -p 4200:4200 -p 4443:4443 -p 5555:5555 -u root -e MY_UID=0 ${binds} --privileged') {
     stage('Preparation') {
       sh 'rm -rf ~/.m2/repository/io/openvidu || true'
       sh 'rm -rf ~/.m2/repository/org/kurento || true'
