--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -4,9 +4,9 @@ node('container') {
   parallel (
     'Download fake video': {
       sh(script: '''#!/bin/bash -xe
-        FAKE_VIDEO=/opt/openvidu-cache/barcode.y4m
+        FAKE_VIDEO=/opt/openvidu/barcode.y4m
         if [ ! -f $FAKE_VIDEO ]; then
-          curl --location https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/barcode.y4m --create-dirs --output /opt/openvidu-cache/barcode.y4m
+          curl --location https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/barcode.y4m --create-dirs --output /opt/openvidu/barcode.y4m
         else
           echo "File $FAKE_VIDEO already exists"
         fi
@@ -14,16 +14,16 @@ node('container') {
     },
     'Download fake audio': {
       sh(script: '''#!/bin/bash -xe
-        FAKE_AUDIO=/opt/openvidu-cache/fakeaudio.wav
+        FAKE_AUDIO=/opt/openvidu/fakeaudio.wav
         if [ ! -f $FAKE_AUDIO ]; then
-          curl --location https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/fakeaudio.wav --create-dirs --output /opt/openvidu-cache/fakeaudio.wav
+          curl --location https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/fakeaudio.wav --create-dirs --output /opt/openvidu/fakeaudio.wav
         else
           echo "File $FAKE_AUDIO already exists"
         fi
       '''.stripIndent())
     },
     'Download custom layout': {
-      sh 'curl --location https://raw.githubusercontent.com/OpenVidu/openvidu/master/openvidu-test-e2e/docker/my-custom-layout/index.html --create-dirs --output /opt/openvidu-cache/test-layouts/layout1/index.html'
+      sh 'curl --location https://raw.githubusercontent.com/OpenVidu/openvidu/master/openvidu-test-e2e/docker/my-custom-layout/index.html --create-dirs --output /opt/openvidu/test-layouts/layout1/index.html'
     }
   )
   parallel (
@@ -47,9 +47,6 @@ node('container') {
   def bindsArray = ['-v /var/run/docker.sock:/var/run/docker.sock:rw',
                     '-v /dev/shm:/dev/shm',
                     '-v /opt/openvidu:/opt/openvidu',
-                    '-v /opt/openvidu-cache/barcode.y4m:/opt/openvidu/barcode.y4m',
-                    '-v /opt/openvidu-cache/fakeaudio.wav:/opt/openvidu/fakeaudio.wav',
-                    '-v /opt/openvidu-cache/test-layouts:/opt/openvidu/test-layouts',
                     '-v /opt/openvidu-cache/.m2:/root/.m2'].join(' ')
 
   docker.image('openvidu/openvidu-test-e2e:$DISTRO').inside('--name e2e -p 4200:4200 -p 4443:4443 -p 5555:5555 -u root -e MY_UID=0 ' + "${bindsArray}" + ' --privileged') {
