--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ node('container') {
       sh(script: '''#!/bin/bash -xe
         FAKE_VIDEO=/opt/openvidu/barcode.y4m
         if [ ! -f $FAKE_VIDEO ]; then
-          curl --location https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/barcode.y4m --create-dirs --output /opt/openvidu/barcode.y4m
+          sudo curl --location https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/barcode.y4m --create-dirs --output /opt/openvidu/barcode.y4m
         else
           echo "File $FAKE_VIDEO already exists"
         fi
@@ -16,14 +16,14 @@ node('container') {
       sh(script: '''#!/bin/bash -xe
         FAKE_AUDIO=/opt/openvidu/fakeaudio.wav
         if [ ! -f $FAKE_AUDIO ]; then
-          curl --location https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/fakeaudio.wav --create-dirs --output /opt/openvidu/fakeaudio.wav
+          sudo curl --location https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/fakeaudio.wav --create-dirs --output /opt/openvidu/fakeaudio.wav
         else
           echo "File $FAKE_AUDIO already exists"
         fi
       '''.stripIndent())
     },
     'Download custom layout': {
-      sh 'curl --location https://raw.githubusercontent.com/OpenVidu/openvidu/master/openvidu-test-e2e/docker/my-custom-layout/index.html --create-dirs --output /opt/openvidu/test-layouts/layout1/index.html'
+      sh 'sudo curl --location https://raw.githubusercontent.com/OpenVidu/openvidu/master/openvidu-test-e2e/docker/my-custom-layout/index.html --create-dirs --output /opt/openvidu/test-layouts/layout1/index.html'
     }
   )
   parallel (
