deployment: Stop before start openvidu to run everything correctly after machine reboot

--- a/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
@@ -622,6 +622,7 @@ Resources:
                 # Restart all services
                 pushd /opt/openvidu
                 export FOLLOW_OPENVIDU_LOGS=false
+                ./openvidu stop
                 ./openvidu start
                 popd
               mode: "000755"
