--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -1,5 +1,5 @@
 node('container') {
-  def commonFunctions = load('commonFunctions.groovy')
+  def commonFunctions = load('openvidu-test-e2e/jenkins/commonFunctions.groovy')
   commonFunctions.prepareTestingEnvironment()
 
   def bindsArray = ['-v /var/run/docker.sock:/var/run/docker.sock:rw',
