Check openvidu-browser and openvidu-server compatibility

--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -332,6 +332,11 @@
 			<artifactId>openvidu-java-client</artifactId>
 			<version>${version.openvidu.java.client}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-artifact</artifactId>
+			<version>${version.maven.artifact}</version>
+		</dependency>
 
 		<!-- Test dependencies -->
 
