--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -5,6 +5,7 @@
         "hark": "1.2.3",
         "jsnlog": "2.30.0",
         "platform": "1.3.6",
+        "semver": "7.3.5",
         "uuid": "8.3.2",
         "wolfy87-eventemitter": "5.2.9"
     },
