Jenkinsfile: improved removeStrandedContainers

--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -165,6 +165,7 @@ node('container') {
             currentBuild.result = 'FAILURE'
           } finally {
             environmentStop()
+            commonFunctions.removeStrandedContainers(false)
           }
         }
       }
